--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "3rdparty/mshadow"]
-	path = 3rdparty/mshadow
-	url = https://github.com/ROCmSoftwarePlatform/mshadow.git
-	branch = downstream_27Mar2018
 [submodule "3rdparty/dmlc-core"]
 	path = 3rdparty/dmlc-core
 	url = https://github.com/dmlc/dmlc-core.git
@@ -31,3 +27,8 @@
 	path = 3rdparty/cub-hip
 	url = https://github.com/ROCmSoftwarePlatform/cub-hip.git
         branch = hip_port_1.7.3
+
+[submodule "3rdparty/mshadow"]
+	path = 3rdparty/mshadow
+	url = https://github.com/asleepzzz/mshadow_20190306/
+	branch = downstream_27Mar2018
