added cubhip module for downstreaming

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,12 +23,14 @@
 [submodule "3rdparty/onnx-tensorrt"]
 	path = 3rdparty/onnx-tensorrt
 	url = https://github.com/onnx/onnx-tensorrt.git
-[submodule "3rdparty/cub-hip"]
-	path = 3rdparty/cub-hip
-	url = https://github.com/ROCmSoftwarePlatform/cub-hip.git
-        branch = hip_port_1.7.3
-
 [submodule "3rdparty/mshadow"]
 	path = 3rdparty/mshadow
 	url = https://github.com/asleepzzz/mshadow_20190306/
 	branch = downstream_27Mar2018
+[submodule "3rdparty/cub-hip"]
+	path = 3rdparty/cub-hip
+	url = https://github.com/ROCmSoftwarePlatform/cub-hip.git
+	branch = cubhip_mxnet
+[submodule "3rdparty/Thrust"]
+	path = 3rdparty/Thrust
+	url = https://github.com/ROCmSoftwarePlatform/Thrust.git
