--- a/.gitmodules
+++ b/.gitmodules
@@ -27,10 +27,6 @@
 	path = 3rdparty/mshadow
 	url = https://github.com/asleepzzz/mshadow_20190306/
 	branch = downstream_27Mar2018
-[submodule "3rdparty/cub-hip"]
-	path = 3rdparty/cub-hip
-	url = https://github.com/ROCmSoftwarePlatform/cub-hip.git
-	branch = cubhip_mxnet
-[submodule "3rdparty/Thrust"]
-	path = 3rdparty/Thrust
-	url = https://github.com/ROCmSoftwarePlatform/Thrust.git
+[submodule "3rdparty/cub"]
+	path = 3rdparty/cub
+	url = https://github.com/dmlc/cub
